--- a/output.css
+++ b/output.css
@@ -559,7 +559,7 @@ video {
   border-width: 4px;
   --tw-border-opacity: 1;
   border-color: rgb(161 161 170 / var(--tw-border-opacity));
-  font-size: 10vmin;
+  font-size: min(17vmin, 7rem);
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
