--- a/output.css
+++ b/output.css
@@ -590,12 +590,8 @@ video {
   z-index: ;
 }
 
-.z-\[01\] {
-  z-index: 01;
-}
-
-.z-\[1\] {
-  z-index: 1;
+.z-\[0\] {
+  z-index: 0;
 }
 
 .z-\[-1\] {
@@ -614,8 +610,8 @@ video {
   height: 100vh;
 }
 
-.h-\[45vmin\] {
-  height: 45vmin;
+.h-\[18rem\] {
+  height: 18rem;
 }
 
 .h-\[90vmin\] {
@@ -626,48 +622,12 @@ video {
   max-height: 36rem;
 }
 
-.max-h-\[\] {
-  max-height: ;
-}
-
-.max-h-\[1\] {
-  max-height: 1;
-}
-
-.max-h-\[15\] {
-  max-height: 15;
-}
-
-.max-h-\[15re\] {
-  max-height: 15re;
-}
-
-.max-h-\[15rem\] {
-  max-height: 15rem;
-}
-
-.max-h-\[16rem\] {
-  max-height: 16rem;
-}
-
-.max-h-\[17rem\] {
-  max-height: 17rem;
-}
-
-.max-h-\[1rem\] {
-  max-height: 1rem;
-}
-
-.max-h-\[18rem\] {
-  max-height: 18rem;
-}
-
 .w-screen {
   width: 100vw;
 }
 
-.w-\[45vmin\] {
-  width: 45vmin;
+.w-\[18rem\] {
+  width: 18rem;
 }
 
 .w-full {
@@ -680,46 +640,6 @@ video {
 
 .max-w-xl {
   max-width: 36rem;
-}
-
-.max-w-lg {
-  max-width: 32rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
-}
-
-.max-w-\[10\] {
-  max-width: 10;
-}
-
-.max-w-\[10rem\] {
-  max-width: 10rem;
-}
-
-.max-w-\[15rem\] {
-  max-width: 15rem;
-}
-
-.max-w-\[1rem\] {
-  max-width: 1rem;
-}
-
-.max-w-\[16rem\] {
-  max-width: 16rem;
-}
-
-.max-w-\[17rem\] {
-  max-width: 17rem;
-}
-
-.max-w-\[18rem\] {
-  max-width: 18rem;
 }
 
 .grid-cols-3 {
@@ -738,33 +658,25 @@ video {
   justify-content: center;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-7 {
-  gap: 1.75rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .border {
   border-width: 1px;
 }
 
-.border-zinc-400 {
+.border-zinc-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(161 161 170 / var(--tw-border-opacity));
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
 }
 
 .bg-zinc-400 {
@@ -783,6 +695,30 @@ video {
 
 .bg-opacity-100 {
   --tw-bg-opacity: 1;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.text-zinc-500 {
+  --tw-text-opacity: 1;
+  color: rgb(113 113 122 / var(--tw-text-opacity));
 }
 
 .opacity-100 {
@@ -819,11 +755,21 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-* {
+/* * {
   outline: 1px solid black;
+} */
+
+.hover\:bg-zinc-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-zinc-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(161 161 170 / var(--tw-bg-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
